--- a/WebContent/views/desktop/gestion/trabajoSocial/planificacion/actividades/asignacion/ActividadesTrabajoSocialPlanificadoIndex.zul
+++ b/WebContent/views/desktop/gestion/trabajoSocial/planificacion/actividades/asignacion/ActividadesTrabajoSocialPlanificadoIndex.zul
@@ -1,5 +1,5 @@
 <zk xmlns:n="native" xmlns:w="client">
-	<div class="wizard ${arg.animation_} container"
+	<div class="wizard ${arg.animation_}"
 		use="karen.core.wizard.controllers.C_WindowWizard"
 		apply="org.zkoss.bind.BindComposer"
 		viewModel="@id('vm') @init('ve.smile.gestion.trabajo_social.planificacion.actividades.asignacion.viewmodels.VM_ActividadesTrabajoSocialPlanificadoIndex')">
