--- a/WebContent/views/desktop/gestion/trabajoSocial/planificacion/actividades/participantes/actividadesParticipantes.zul
+++ b/WebContent/views/desktop/gestion/trabajoSocial/planificacion/actividades/participantes/actividadesParticipantes.zul
@@ -1,71 +1,4 @@
-<?xel-method prefix="m" name="getBufferedImage" class="lights.smile.util.Zki" 
-	signature="java.awt.image.BufferedImage getBufferedImage(java.lang.String)" ?>
-
 <div sclass="row section animated fadeInLeft">
-
-	<style>
-
-		.z-grid-emptybody td { font-family: Roboto; font-size: 13px;
-		font-weight: normal; font-style: normal; color: #aaa;
-		font-style: italic; text-align: center; height: 1px; padding:
-		6px !important; }
-
-		.z-grid .z-column-content { font-family: 'Roboto'; font-size:
-		13px; color: #ffffff; background: #8d7a6f; }
-
-		tr.row-vacaciones { border-bottom: 1px solid #CFCFCF;
-		background: #ffffff; }
-
-
-		.z-row .z-detail-outer { width: 40px; min-width: 40px;
-		border-top: 1px solid #cfcfcf; padding: 18px 6px; line-height:
-		normal; background: transparent !important; vertical-align: top;
-		}
-
-
-		.z-auxhead:hover .z-auxheader-content { background: #EEEEEE
-		!important; }
-
-
-		.z-auxheader-content { background: #EEEEEE !important;
-		border-right: 1px solid #E5F4FB; height: 41px; }
-
-		.z-detail { font-size: 14px; width: 16px; height: 16px; border:
-		none !important; padding: 0; line-height: 14px; background:
-		transparent !important; text-align: center; overflow: hidden;
-		white-space: nowrap; cursor: pointer; }
-
-		.z-columns th:first-child { border-left: none; border-right:
-		none !important; }
-
-		.z-row .z-detail-outer+td, .z-row .z-detail-inner :first-child {
-		border-left: none; }
-
-		tr.header-periodo-disfute { background-color: rgba(192, 192,
-		193, 0.27); }
-
-
-		.z-messagebox .z-label { font-family: 'Roboto'; font-size: 15px
-		!important; color: #363636; }
-
-		.z-cell .vacacion { background-color: #fff !important;
-		border-left: 1px solid #cfcfcf !important; }
-
-		.z-cell .periodo { background-color: #fff !important; }
-
-		.z-grid .vacacion { border: 1px solid rgba(128, 128, 128, 0.33)
-		!important; }
-
-		.z-grid-odd>.z-row-inner, .z-grid-odd>.z-cell { background:
-		#FFFFFF !important; }
-
-		.z-foot .vacacion { background-color: rgb(238, 238, 238)
-		!important; }
-
-		.z-grid.periodo>div.z-grid-body { overflow: auto; max-height:
-		500px !important; }
-
-	</style>
 	<div sclass="col s12">
 		<tabbox id="tb" class="rtab ltab">
 			<tabs id="tabs">
@@ -84,9 +17,9 @@
 							<column label="Descripción"
 								sort="auto(descripcion)" align="center" width="35%" />
 							<column label="Clasificador de Tarea"
-								sort="auto(clasificadoTarea)" align="center" width="23%" />
-							<column label="Indicadores" align="center"
-								width="12%">
+								sort="auto(clasificadoTarea)" align="center" width="25%" />
+							<column label="Voluntarios" align="center"
+								width="10%">
 
 							</column>
 						</columns>
@@ -102,17 +35,21 @@
 										emptyMessage="No hay voluntarios asociados a las actividades"
 										model="@bind(actividad.tsPlanActividadVoluntarios)">
 										<auxhead>
-											<auxheader colspan="4"
+											<auxheader colspan="6"
 												align="center" label="VOLUNTARIOS ASOCIADOS">
 											</auxheader>
 										</auxhead>
 										<columns
 											sclass="header-periodo-disfute">
 											<column label=""
-												width="21%" />
+												width="10%" />
 											<column label="Cédula/Rif"
-												width="29%" />
+												width="10%" />
 											<column label="Voluntario"
+												align="center" width="30%" />
+											<column label="Correo"
+												align="center" width="20%" />
+											<column label="Teléfono"
 												align="center" width="20%" />
 											<column label="Eliminar"
 												width="10%" align="center">
@@ -124,13 +61,13 @@
 
 												<cell
 													sclass="vacacion">
-													<!-- 										<div align="center" -->
-													<!-- 											visible="@bind(not empty each.fkVoluntario.fkPersona.fkMultimedia)"> -->
-													<!-- 											<image -->
-													<!-- 												content="${m:getBufferedImage(each.fkVoluntario.fkPersona.fkMultimedia.url)}" -->
-													<!-- 												width="30px" height="30px" sclass="circle"> -->
-													<!-- 											</image> -->
-													<!-- 										</div> -->
+													<div
+														align="center">
+														<image
+															src="${m:getUrlWeb(each.fkVoluntario.fkPersona.fkMultimedia.url)}"
+															width="30px" height="30px" sclass="circle">
+														</image>
+													</div>
 												</cell>
 
 												<cell
@@ -143,6 +80,16 @@
 													sclass="vacacion">
 													<label
 														value="@bind(each.fkVoluntario.fkPersona.nombre.concat(' ').concat(each.fkVoluntario.fkPersona.apellido))" />
+												</cell>
+												<cell
+													sclass="vacacion">
+													<label
+														value="@bind(each.fkVoluntario.fkPersona.correo)" />
+												</cell>
+												<cell
+													sclass="vacacion">
+													<label
+														value="@bind(each.fkVoluntario.fkPersona.telefono1)" />
 												</cell>
 												<cell sclass="vacacion"
 													style="    border-left: 2px solid #EEEEEE !important;">
@@ -174,7 +121,7 @@
 									<button
 										sclass="teal lighten-1 waves-effect waves-light"
 										onClick="@command('buscarVoluntarios', index=statusActividad.index)"
-										iconSclass="fa fa-search" tooltiptext="Editar Lugar"
+										iconSclass="fa fa-plus" tooltiptext="Editar Lugar"
 										style="/padding: 5px 6px; background-color: #2AA4EF !important; float: center">
 									</button>
 								</cell>
@@ -196,7 +143,7 @@
 								sort="auto(descripcion)" align="center" width="35%" />
 							<column label="Clasificador de Tarea"
 								sort="auto(clasificadoTarea)" align="center" width="23%" />
-							<column label="Indicadores" align="center"
+							<column label="Trabajadores" align="center"
 								width="12%">
 
 							</column>
@@ -206,14 +153,13 @@
 							<row style="overflow:auto; max-height:200px"
 								sclass="row-vacaciones">
 
-
 								<detail open="false" fulfill="onOpen">
 
 									<grid sclass="vacacion"
 										emptyMessage="No hay trabajadores asociados a las tareas"
 										model="@bind(actividad.tsPlanActividadTrabajadors)">
 										<auxhead>
-											<auxheader colspan="4"
+											<auxheader colspan="6"
 												align="center" label="TRABAJADORES ASOCIADOS">
 											</auxheader>
 										</auxhead>
@@ -236,13 +182,13 @@
 
 												<cell
 													sclass="vacacion">
-													<!-- 										<div align="center" -->
-													<!-- 											visible="@bind(not empty each.fkVoluntario.fkPersona.fkMultimedia)"> -->
-													<!-- 											<image -->
-													<!-- 												content="${m:getBufferedImage(each.fkVoluntario.fkPersona.fkMultimedia.url)}" -->
-													<!-- 												width="30px" height="30px" sclass="circle"> -->
-													<!-- 											</image> -->
-													<!-- 										</div> -->
+													<div
+														align="center">
+														<image
+															src="${m:getUrlWeb(each.fkPersona.fkMultimedia.url)}"
+															width="30px" height="30px" sclass="circle">
+														</image>
+													</div>
 												</cell>
 
 												<cell
@@ -286,7 +232,7 @@
 									<button
 										sclass="teal lighten-1 waves-effect waves-light"
 										onClick="@command('buscarTrabajadores', index=statusActividad.index)"
-										iconSclass="fa fa-search" tooltiptext="Buscar Trabajadores"
+										iconSclass="fa fa-plus" tooltiptext="Buscar Trabajadores"
 										style="/padding: 5px 6px; background-color: #2AA4EF !important; float: center">
 									</button>
 								</cell>
