--- a/WebContent/views/desktop/gestion/trabajoSocial/planificacion/actividades/participantes/catalogoTrabajadores.zul
+++ b/WebContent/views/desktop/gestion/trabajoSocial/planificacion/actividades/participantes/catalogoTrabajadores.zul
@@ -1,5 +1,5 @@
-<?xel-method prefix="m" name="getBufferedImage" class="lights.smile.util.Zki" 
-	signature="java.awt.image.BufferedImage getBufferedImage(java.lang.String)" ?>
+<?xel-method prefix="m" name="getUrlWeb" class="lights.smile.util.Zki" 
+	signature="java.lang.String getUrlWeb(java.lang.String)" ?>
 
 <zk xmlns:n="native" xmlns:w="client">
 
@@ -8,7 +8,7 @@
 		use="karen.core.dialog.catalogue.list_pagination.controllers.C_ListPaginationCatalogueDialog"
 		apply="org.zkoss.bind.BindComposer"
 		viewModel="@id('vm') @init('ve.smile.gestion.trabajo_social.planificacion.actividades.participantes.viewmodels.VM_CatalogoTrabajador', dialogData=arg.get('dialogData'))">
-		<caption label="RESPONSABLE" style="margin-left: 40%;" />
+		<caption label="TRABAJADORES" style="margin-left: 40%;" />
 		<separator height="20px"></separator>
 		<n:h6 style="margin-left: 5%;">
 			Por favor seleccione los trabajadores:
@@ -16,21 +16,23 @@
 		<separator height="20px" orient="vertical"></separator>
 		<listbox id="listbox" model="@load(vm.objectList)"
 			selectedItem="@bind(vm.selectedObject)" multiple="true"
-			checkmark="true"
+			checkmark="true" emptyMessage="No hay trabajadores activos registrados"
 			style="width: 90%; margin-left: 5%;padding-bottom: 5%;">
 
 			<listhead>
 				<listheader width="10%" label="Imagen" />
 				<listheader width="15%" label="Cédula/RIF" />
-				<listheader width="35%" label="Nombre" />
-				<listheader width="30%" label="Apellido" />
+				<listheader width="15%" label="Nombre" />
+				<listheader width="20%" label="Apellido" />
+				<listheader width="20%" label="Correo" />
+				<listheader width="20%" label="Teléfono" />
 			</listhead>
 			<template name="model">
 				<listitem>
 					<listcell>
 						<div align="center">
 							<image
-								content="${m:getBufferedImage(each.fkPersona.fkMultimedia.url)}"
+								src="${m:getUrlWeb(each.fkPersona.fkMultimedia.url)}"
 								width="30px" height="30px" sclass="circle">
 							</image>
 						</div>
@@ -39,10 +41,12 @@
 						label="@load(each.fkPersona.identificacion)" />
 					<listcell label="@load(each.fkPersona.nombre)" />
 					<listcell label="@load(each.fkPersona.apellido)" />
+					<listcell label="@load(each.fkPersona.correo)" />
+					<listcell label="@load(each.fkPersona.telefono1)" />
 				</listitem>
 			</template>
 			<listfoot>
-				<listfooter id="listFoot" span="4"
+				<listfooter id="listFoot" span="6"
 					use="karen.core.listfoot.ListFoot">
 				</listfooter>
 			</listfoot>
