--- a/WebContent/views/desktop/gestion/trabajoSocial/planificacion/indicadores/catalogoPlantillaIndicadoresTrabajoSocial.zul
+++ b/WebContent/views/desktop/gestion/trabajoSocial/planificacion/indicadores/catalogoPlantillaIndicadoresTrabajoSocial.zul
@@ -4,29 +4,35 @@
 		action="show: slideIn;hide: slideOut"
 		use="karen.core.dialog.catalogue.list_pagination.controllers.C_ListPaginationCatalogueDialog"
 		apply="org.zkoss.bind.BindComposer"
-		viewModel="@id('vm') @init('ve.smile.gestion.trabajo_social.planificacion.viewmodels.VM_CatalogoVoluntario', dialogData=arg.get('dialogData'))">
-		<caption label="VOLUNTARIO" style="margin-left: 40%;" />
+		viewModel="@id('vm') @init('ve.smile.gestion.trabajo_social.planificacion.indicadores.viewmodels.VM_CatalogoPlantillaIndicadores', dialogData=arg.get('dialogData'))">
+		<caption label="PLANTILLA INDICADORES" style="margin-left: 40%;" />
 		<separator height="20px"></separator>
 		<n:h6 style="margin-left: 5%;">
-			Por favor seleccione un responsable:
+			Por favor seleccione los indicadores de su preferencia:
 		</n:h6>
 		<separator height="20px"></separator>
 		<listbox id="listbox" model="@load(vm.objectList)"
-			selectedItem="@bind(vm.selectedObject)"
+			selectedItem="@bind(vm.selectedObject)" multiple="true"
+			checkmark="true"
+			emptyMessage="No hay plantilla de indicadores para el Trabajo Social seleccionado"
 			style="width: 90%; margin-left: 5%;padding-bottom: 5%;">
 
 			<listhead sizable="true">
-				<listheader label="Nombre" />
-				<listheader label="Apellido" />
+				<listheader label="Indicador" />
+				<listheader label="Descripción" />
+				<listheader label="Unidad de Medida" />
 			</listhead>
 			<template name="model">
 				<listitem>
-					<listcell label="@load(each.fkPersona.nombre)" />
-					<listcell label="@load(each.fkPersona.apellido)" />
+					<listcell label="@load(each.fkIndicador.nombre)" />
+					<listcell
+						label="@load(each.fkIndicador.descripcion)" />
+					<listcell
+						label="@load(each.fkIndicador.fkUnidadMedida.nombre)" />
 				</listitem>
 			</template>
 			<listfoot>
-				<listfooter id="listFoot" span="2"
+				<listfooter id="listFoot" span="3"
 					use="karen.core.listfoot.ListFoot">
 				</listfooter>
 			</listfoot>
