--- a/WebContent/views/desktop/gestion/voluntariado/fortalezas/listaFortalezas.zul
+++ b/WebContent/views/desktop/gestion/voluntariado/fortalezas/listaFortalezas.zul
@@ -1,48 +1,64 @@
 <zk xmlns:n="native" xmlns:w="client">
 	<div sclass="animated fadeInLeft">
 		<div class="row">
-			<div class="col s12" align="center" style="margin-bottom: 15px;">
-				<label value="Seleccione las fortalezas del voluntario" sclass="label-medium-500"></label>
+			<div class="col s12" align="center"
+				style="margin-bottom: 15px;">
+				<label value="Seleccione las fortalezas del voluntario"
+					sclass="label-medium-500">
+				</label>
 			</div>
 		</div>
-		
+
 		<div width="100%">
 			<div class="row">
 				<div class="col s12">
-					
+
 					<div sclass="col s5" style="padding:0px">
-						<listbox model="@load(vm.fortalezas)" emptyMessage="No hay fortalezas registradas" selectedItems="@bind(vm.fortalezasSeleccionadas)" multiple="true">
+						<listbox model="@load(vm.fortalezas)"
+							emptyMessage="No hay fortalezas registradas"
+							selectedItems="@bind(vm.fortalezasSeleccionadas)"
+							multiple="true">
 							<listhead sizable="true">
 								<listheader label="Fortalezas" />
 							</listhead>
 							<template name="model">
 								<listitem label="@load(each.nombre)">
-									<zscript> self.setDisabled(vm.disabledFortaleza(each)); </zscript>
+									<zscript>
+	self.setDisabled(vm.disabledFortaleza(each));
+</zscript>
 								</listitem>
 							</template>
 						</listbox>
 					</div>
-					
+
 					<div sclass="col s2" align="center">
 						<div sclass="row">
-							<button sclass="button-conf" iconSclass="fa fa-angle-double-right" onClick="@command('agregarFortalezas')" />
+							<button sclass="button-conf"
+								iconSclass="fa fa-angle-double-right"
+								onClick="@command('agregarFortalezas')" />
 						</div>
 						<div sclass="row">
-							<button sclass="button-conf" iconSclass="fa fa-angle-double-left" onClick="@command('removerFortalezas')" />
+							<button sclass="button-conf"
+								iconSclass="fa fa-angle-double-left"
+								onClick="@command('removerFortalezas')" />
 						</div>
 					</div>
 
 					<div sclass="col s5" style="padding:0px">
-						<listbox model="@load(vm.selectedObject.fortalezas)" emptyMessage="No hay fortalezas asociadas al voluntario" selectedItems="@bind(vm.voluntarioFortalezasSeleccionadas)" multiple="true">
+						<listbox model="@load(vm.voluntarioFortalezas)"
+							emptyMessage="No hay fortalezas asociadas al voluntario"
+							selectedItems="@bind(vm.voluntarioFortalezasSeleccionadas)"
+							multiple="true">
 							<listhead sizable="true">
-								<listheader label="Fortalezas del voluntario" />
+								<listheader
+									label="Fortalezas del voluntario" />
 							</listhead>
 							<template name="model">
 								<listitem label="@load(each.nombre)" />
 							</template>
 						</listbox>
 					</div>
-					
+
 				</div>
 			</div>
 		</div>
