--- a/WebContent/views/desktop/gestion/reconocimiento/asignarReconocimiento/AsignarReconocimientoIndex.zul
+++ b/WebContent/views/desktop/gestion/reconocimiento/asignarReconocimiento/AsignarReconocimientoIndex.zul
@@ -2,10 +2,12 @@
 	<div class="wizard ${arg.animation_} container"
 		use="karen.core.simple_list.wizard.controllers.C_WindowWizard"
 		apply="org.zkoss.bind.BindComposer"
-		viewModel="@id('vm') @init('ve.smile.gestion.trabajadores.egreso.viewmodels.VM_EgresoTrabajadorIndex')">
+		viewModel="@id('vm') @init('ve.smile.gestion.reconocimiento.asignarReconocimiento.viewmodels.VM_AsignarReconocimientoIndex')">
 		
 		<div class="row">
-			<div id="ulHeaderWizard" use="karen.core.simple_list.wizard.buttons.containers.UlHeaderWizard"></div>
+			<div id="ulHeaderWizard"
+				use="karen.core.simple_list.wizard.buttons.containers.UlHeaderWizard">
+			</div>
 
 			<div sclass="col s12">
 				<include id="include" src="@bind(vm.srcPageContent)"></include>
