--- a/WebContent/views/web/eventos.zul
+++ b/WebContent/views/web/eventos.zul
@@ -1,3 +1,5 @@
+<?xel-method prefix="m" name="getUrlWeb" class="lights.smile.util.Zki" 
+	signature="java.lang.String getUrlWeb(java.lang.String)" ?>
 <zk xmlns:n="native" xmlns:w="client">
 	<n:link href="assets/css/web/eventos.css" rel="stylesheet"
 		type="text/css">
@@ -48,14 +50,13 @@
 							<div
 								class="card-image waves-effect waves-block waves-light">
 								<div class="view">
--									<image class="activator"
-										src="@load(each.fkMultimedia.url)">						
+									<image class="activator"
+										src="${m:getUrlWeb(each.fkMultimedia.url)}">
 									</image>
-									
 									<div class="mask"></div>
 									<div class="content center">
 										<div class="row abc">
-											<div class="col s6">
+											<div class="col s12">
 												<n:h2>
 													<label
 														value="@load(each.fkEvento.nombre)"
