--- a/WebContent/views/desktop/gestion/trabajadores/trabajador/TrabajadorFormBasic.zul
+++ b/WebContent/views/desktop/gestion/trabajadores/trabajador/TrabajadorFormBasic.zul
@@ -15,6 +15,8 @@
 							label="Datos personales" selected="true" />
 						<tab id="tabContacto"
 							label="Información de contacto" />
+						<tab id="tabProfesion"
+							label="Profesiones" />
 					</tabs>
 
 					<tabpanels>
@@ -36,7 +38,6 @@
 								</combobox>
 							</div>
 									
-
 							<div class="input-field col s6">
 								<n:label for="identificacion">
 									Cédula/RIF
@@ -205,6 +206,7 @@
 								<span sclass="fa fa-question-circle fa-lg help-icon-special" 
 									tooltip="pop_correo, position=after_end" />
 								<textbox id="correo" type="text"
+									constraint="/.+@.+\.[a-zA-Z]+/:Debe ingresar un correo válido"
 									value="@bind(vm.persona.correo)">
 								</textbox>
 							</div>
@@ -250,8 +252,51 @@
 									value="@bind(vm.persona.linkedin)">
 								</textbox>
 							</div>
-
 						</tabpanel>
+						
+						
+						<tabpanel>
+					<div sclass="col s5" style="padding:0px">
+						<listbox model="@load(vm.profesiones)" 
+						emptyMessage="No hay profesiones registradas" 
+						selectedItems="@bind(vm.profesionesSeleccionadas)" 
+						multiple="true">
+							<listhead sizable="true">
+								<listheader label="Profesiones" />
+							</listhead>
+							<template name="model">
+								<listitem label="@load(each.nombre)">
+									<zscript> self.setDisabled(vm.disabledProfesion(each)); </zscript>
+								</listitem>
+							</template>
+						</listbox>
+					</div>
+					
+					<div sclass="col s1" align="center">
+						<div sclass="row">
+							<button sclass="button-conf" iconSclass="fa fa-angle-double-right" onClick="@command('agregarProfesiones')" />
+						</div>
+						<div sclass="row">
+							<button sclass="button-conf" 
+							iconSclass="fa fa-angle-double-left" 
+							onClick="@command('removerProfesiones')" />
+						</div>
+					</div>
+
+					<div sclass="col s5" style="padding:0px">
+						<listbox model="@load(vm.trabajadorProfesiones)" emptyMessage="No hay profesiones asociadas al trabajador" selectedItems="@bind(vm.trabajadorProfesionesSeleccionadas)" multiple="true">
+							<listhead sizable="true">
+								<listheader label="Profesiones del trabajador" />
+							</listhead>
+							<template name="model">
+								<listitem label="@load(each.nombre)" />
+							</template>
+						</listbox>
+					</div>
+						
+				</tabpanel>
+												
+						
 
 					</tabpanels>
 
