--- a/WebContent/views/desktop/gestion/trabajadores/trabajador/TrabajadorIndex.zul
+++ b/WebContent/views/desktop/gestion/trabajadores/trabajador/TrabajadorIndex.zul
@@ -7,16 +7,17 @@
 		<div class="row">
 			<div class="col s12">
 				<div class="col s12">
-					<listbox id="listbox" model="@load(vm.objectsList)" selectedItem="@bind(vm.selectedObject)">
+					<listbox id="listbox" model="@load(vm.objectsList)" 
+					selectedItem="@bind(vm.selectedObject)">
 						<listhead sizable="true">
-							<listheader width="33%" label="Nombre" />
-							<listheader width="33%" label="Apellido" />
+							<listheader width="33%" label="Cédula" />
+							<listheader width="33%" label="Trabajador" />
 							<listheader width="33%" label="Cargo" />
 						</listhead>
 						<template name="model">
 							<listitem>
-								<listcell label="@load(each.fkPersona.nombre)" />
-								<listcell label="@load(each.fkPersona.apellido)" />
+								<listcell label="@load(each.fkPersona.identificacion)" />
+								<listcell label="@load(each.fkPersona.nombre.concat(' ').concat(each.fkPersona.apellido))" />
 								<listcell label="@load(each.fkCargo.nombre)" />
 							</listitem>
 						</template>
