--- a/WebContent/views/web/participa.zul
+++ b/WebContent/views/web/participa.zul
@@ -63,6 +63,13 @@
 											<label
 												value="@load(each.descripcion)" />
 										</span>
+										<n:br/>
+										<n:br/>
+										<button type="button"
+												class="waves-effect waves-light btn" href="" visible="@load(empty  each.tipoFormulario )"
+												onClick="@command('contactanos')">
+												CONTACTANOS
+											</button>
 									</div>
 									<div class=" col s6" visible="@load(not empty each.requisitos)">
 										<span class="requisitos">
@@ -100,6 +107,7 @@
 												onClick="@command('abrirPostularPadrino')">
 												POSTÚLATE
 											</button>
+											
 										</div>
 									</div>
 								</div>
